# my-wasm-learning

./: README.md
chat/: Cargo.toml  README.md  spin.toml
chat/src/: lib.rs  main.rs
first-cli/: Cargo.toml
first-cli/src/: main.rs
first-cli/src/api/: stringer.rs
gpt2-bot/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  spin.toml
gpt2-bot/src/: lib.rs
wasi-bot/: Cargo.toml  README.md
wasi-bot/bot-src/: Dockerfile  README.md  app.py  requirements.txt
wasi-bot/src/: main-bkp  main.rs
wasi-bot/templates/: index.html
wasm-spin/ksctl/: Cargo.toml  Dockerfile  README.md  spin.toml
wasm-spin/ksctl/create-cluster/: Cargo.toml
wasm-spin/ksctl/create-cluster/src/: lib.rs
wasm-spin/ksctl/delete-cluster/: Cargo.toml
wasm-spin/ksctl/delete-cluster/src/: lib.rs
wasm-spin/ksctl/src/: lib.rs
