[package]
name = "wasi-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httpcodec = "0.2.3"
bytecodec = "0.4.15"
http_req_wasi  = "0.10"
wasmedge_wasi_socket = "0.5.0"
wasmedge_http_req = "0.9.0"

